[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/dialogue system/dialogue_system.gd" type="Script" id=2]
[ext_resource path="res://UI/dialogue_system.theme" type="Theme" id=4]
[ext_resource path="res://UI/continue_dialogue.tres" type="Texture" id=5]
[ext_resource path="res://scripts/dialogue system/background_panel.gd" type="Script" id=10]
[ext_resource path="res://scripts/dialogue system/options_ui.gd" type="Script" id=11]
[ext_resource path="res://scripts/dialogue system/name_tag.gd" type="Script" id=12]
[ext_resource path="res://scripts/dialogue system/dialogue_ui.gd" type="Script" id=13]
[ext_resource path="res://scripts/dialogue system/sounds.gd" type="Script" id=14]

[node name="Dialogue System" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -55.0
margin_right = -5.0
margin_bottom = -5.0
grow_vertical = 0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NT_Container" type="Control" parent="MarginContainer"]
visible = false
margin_right = 310.0
margin_bottom = 50.0
script = ExtResource( 12 )

[node name="Name Tag" type="Panel" parent="MarginContainer/NT_Container"]
margin_left = 8.0
margin_top = -17.0
margin_right = 97.0
margin_bottom = 29.0
grow_vertical = 0
rect_min_size = Vector2( 89, 46 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="MarginContainer/NT_Container/Name Tag"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 5.0
margin_right = -7.187
margin_bottom = -9.0
size_flags_horizontal = 3
custom_colors/default_color = Color( 0.152941, 0.596078, 0.411765, 1 )
bbcode_enabled = true
bbcode_text = "[center]broken[/center]"
text = "broken"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background Panel" type="Panel" parent="MarginContainer"]
margin_right = 310.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 4 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="HBoxContainer" parent="MarginContainer/Background Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 9.0
margin_right = -12.0
margin_bottom = -9.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait Container" type="CenterContainer" parent="MarginContainer/Background Panel/Dialogue"]
margin_bottom = 32.0

[node name="Portrait Image" type="TextureRect" parent="MarginContainer/Background Panel/Dialogue/Portrait Container"]
margin_top = 16.0
margin_bottom = 16.0

[node name="Text" type="RichTextLabel" parent="MarginContainer/Background Panel/Dialogue"]
margin_left = 4.0
margin_right = 281.0
margin_bottom = 32.0
rect_min_size = Vector2( 16.716, 0 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "Press <1> to hear [rainbow freq=0.2][shake level=9]paper kid[/shake][/rainbow] & press <2> to hear [rainbow freq=0.2][shake level=9]sample[/shake][/rainbow]!"
text = "Press <1> to hear paper kid & press <2> to hear sample!"
scroll_active = false
scroll_following = true

[node name="Continue Button" type="TextureRect" parent="MarginContainer/Background Panel/Dialogue"]
margin_left = 285.0
margin_top = 31.0
margin_right = 286.0
margin_bottom = 32.0
size_flags_vertical = 8
texture = ExtResource( 5 )

[node name="Options List" type="VBoxContainer" parent="MarginContainer/Background Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 9.0
margin_right = -12.0
margin_bottom = -9.0
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="HBoxContainer" parent="MarginContainer/Background Panel/Options List"]
margin_right = 286.0
margin_bottom = 11.0
size_flags_vertical = 3

[node name="SelectorContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option1"]
margin_right = 8.0
margin_bottom = 11.0
alignment = 1

[node name="FreeRotate" type="Control" parent="MarginContainer/Background Panel/Options List/Option1/SelectorContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 9.0
rect_min_size = Vector2( 8, 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="TextureRect" parent="MarginContainer/Background Panel/Options List/Option1/SelectorContainer/FreeRotate"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 4, 4 )
size_flags_vertical = 8
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option1"]
margin_left = 12.0
margin_right = 286.0
margin_bottom = 11.0
size_flags_horizontal = 3
alignment = 1

[node name="Text" type="RichTextLabel" parent="MarginContainer/Background Panel/Options List/Option1/TextContainer"]
margin_right = 274.0
margin_bottom = 11.0
rect_min_size = Vector2( 0, 11 )
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
bbcode_text = "option 1"
text = "option 1"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="HBoxContainer" parent="MarginContainer/Background Panel/Options List"]
margin_top = 15.0
margin_right = 286.0
margin_bottom = 26.0
size_flags_vertical = 3

[node name="SelectorContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option2"]
margin_right = 8.0
margin_bottom = 11.0
alignment = 1

[node name="FreeRotate" type="Control" parent="MarginContainer/Background Panel/Options List/Option2/SelectorContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 9.0
rect_min_size = Vector2( 8, 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option2"]
margin_left = 12.0
margin_right = 286.0
margin_bottom = 11.0
size_flags_horizontal = 3
alignment = 1

[node name="Text" type="RichTextLabel" parent="MarginContainer/Background Panel/Options List/Option2/TextContainer"]
margin_right = 274.0
margin_bottom = 11.0
rect_min_size = Vector2( 0, 11 )
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
bbcode_text = "option 2"
text = "option 2"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="HBoxContainer" parent="MarginContainer/Background Panel/Options List"]
margin_top = 30.0
margin_right = 286.0
margin_bottom = 41.0
size_flags_vertical = 3

[node name="SelectorContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option3"]
margin_right = 8.0
margin_bottom = 11.0
alignment = 1

[node name="FreeRotate" type="Control" parent="MarginContainer/Background Panel/Options List/Option3/SelectorContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 9.0
rect_min_size = Vector2( 8, 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option3"]
margin_left = 12.0
margin_right = 286.0
margin_bottom = 11.0
size_flags_horizontal = 3
alignment = 1

[node name="Text" type="RichTextLabel" parent="MarginContainer/Background Panel/Options List/Option3/TextContainer"]
margin_right = 274.0
margin_bottom = 11.0
rect_min_size = Vector2( 0, 11 )
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
bbcode_text = "option 3"
text = "option 3"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option4" type="HBoxContainer" parent="MarginContainer/Background Panel/Options List"]
margin_top = 45.0
margin_right = 286.0
margin_bottom = 56.0
size_flags_vertical = 3

[node name="SelectorContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option4"]
margin_right = 8.0
margin_bottom = 11.0
alignment = 1

[node name="FreeRotate" type="Control" parent="MarginContainer/Background Panel/Options List/Option4/SelectorContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 9.0
rect_min_size = Vector2( 8, 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="VBoxContainer" parent="MarginContainer/Background Panel/Options List/Option4"]
margin_left = 12.0
margin_right = 286.0
margin_bottom = 11.0
size_flags_horizontal = 3
alignment = 1

[node name="Text" type="RichTextLabel" parent="MarginContainer/Background Panel/Options List/Option4/TextContainer"]
margin_right = 274.0
margin_bottom = 11.0
rect_min_size = Vector2( 0, 11 )
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
bbcode_text = "option 4"
text = "option 4"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node2D" parent="MarginContainer"]
position = Vector2( 200, 0 )
script = ExtResource( 14 )

[node name="Dialogue Scroll" type="AudioStreamPlayer" parent="MarginContainer/Sounds"]
volume_db = -25.0
pitch_scale = 0.29

[node name="Select" type="AudioStreamPlayer" parent="MarginContainer/Sounds"]
volume_db = -10.0

[node name="Change Option" type="AudioStreamPlayer" parent="MarginContainer/Sounds"]
volume_db = -10.0

[node name="Advance" type="AudioStreamPlayer" parent="MarginContainer/Sounds"]
volume_db = -80.0
pitch_scale = 1.5

[connection signal="dialogue_advance" from="." to="MarginContainer/NT_Container" method="_on_dialogue_advance"]
[connection signal="dialogue_advance" from="." to="MarginContainer/Background Panel/Dialogue" method="_on_dialogue_advance"]
[connection signal="dialogue_advance" from="." to="MarginContainer/Sounds" method="_on_dialogue_advance"]
[connection signal="display_options" from="." to="MarginContainer/NT_Container" method="_on_display_options"]
[connection signal="display_options" from="." to="MarginContainer/Background Panel" method="_on_display_options"]
[connection signal="display_options" from="." to="MarginContainer/Background Panel/Dialogue" method="_on_display_options"]
[connection signal="display_options" from="." to="MarginContainer/Background Panel/Options List" method="_on_display_options"]
[connection signal="display_options" from="." to="MarginContainer/Sounds" method="_on_display_options"]
[connection signal="display_text" from="." to="MarginContainer/NT_Container" method="_on_display_text"]
[connection signal="display_text" from="." to="MarginContainer/Background Panel" method="_on_display_text"]
[connection signal="display_text" from="." to="MarginContainer/Background Panel/Dialogue" method="_on_display_text"]
[connection signal="display_text" from="." to="MarginContainer/Background Panel/Options List" method="_on_display_text"]
[connection signal="on_dialogue_close" from="." to="MarginContainer/Sounds" method="_on_dialogue_close"]
[connection signal="option_change" from="." to="MarginContainer/Background Panel/Options List" method="_on_option_change"]
[connection signal="option_change" from="." to="MarginContainer/Sounds" method="_on_option_change"]
[connection signal="option_select" from="." to="MarginContainer/Sounds" method="_on_option_select"]
[connection signal="scroll_text" from="." to="MarginContainer/Background Panel/Dialogue" method="_on_scroll_text"]
[connection signal="scroll_text_fast" from="." to="MarginContainer/Background Panel/Dialogue" method="_on_scroll_text_fast"]
[connection signal="dialogue_scrolled" from="MarginContainer/Background Panel/Dialogue" to="." method="_on_dialogue_scrolled"]
[connection signal="scroll_sound" from="MarginContainer/Background Panel/Dialogue" to="MarginContainer/Sounds" method="_trigger_scroll_sound"]
